Bug 216977 - handle clip mask and region for scaled images. r=blizzard, sr=roc